[gd_scene load_steps=5 format=2]

[ext_resource path="res://Theme/new_theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/font/title.tres" type="DynamicFont" id=2]
[ext_resource path="res://Systems/MainMenu/Menu.gd" type="Script" id=3]
[ext_resource path="res://Systems/Small/SmallScript/DataSaver.gd" type="Script" id=4]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.17276, 0.289062, 0.183762, 1 )

[node name="DataSaver" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )

[node name="margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100

[node name="primer" type="VBoxContainer" parent="margin"]
margin_left = 100.0
margin_top = 100.0
margin_right = 1180.0
margin_bottom = 620.0
custom_constants/separation = 20

[node name="tempHBox" type="HBoxContainer" parent="margin/primer"]
margin_right = 1080.0
margin_bottom = 250.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="margin/primer/tempHBox"]
margin_right = 538.0
margin_bottom = 250.0
size_flags_horizontal = 3
scroll_horizontal_enabled = false

[node name="Panel" type="Panel" parent="margin/primer/tempHBox/ScrollContainer"]

[node name="ColorPicker" type="ColorPicker" parent="margin/primer/tempHBox/ScrollContainer/Panel"]
margin_left = 118.0
margin_right = 408.0
margin_bottom = 447.0
rect_scale = Vector2( 0.84, 0.84 )
size_flags_horizontal = 6
color = Color( 0.623529, 0.137255, 0.607843, 1 )
edit_alpha = false
presets_enabled = false
presets_visible = false

[node name="name" type="LineEdit" parent="margin/primer/tempHBox"]
margin_left = 542.0
margin_right = 1080.0
margin_bottom = 250.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
align = 1
max_length = 16
placeholder_text = "Name"

[node name="HBox" type="HBoxContainer" parent="margin/primer"]
margin_top = 270.0
margin_right = 1080.0
margin_bottom = 520.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="join" type="Button" parent="margin/primer/HBox"]
margin_right = 530.0
margin_bottom = 250.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "JOIN"

[node name="host" type="Button" parent="margin/primer/HBox"]
margin_left = 550.0
margin_right = 1080.0
margin_bottom = 250.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "HOST"

[node name="join" type="VBoxContainer" parent="margin"]
visible = false
margin_left = 100.0
margin_top = 100.0
margin_right = 1180.0
margin_bottom = 620.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="VBox" type="VBoxContainer" parent="margin/join"]
margin_right = 1880.0
margin_bottom = 510.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="ip" type="LineEdit" parent="margin/join/VBox"]
margin_right = 1880.0
margin_bottom = 245.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "127.0.0.1"
align = 1
placeholder_text = "ip"

[node name="port" type="LineEdit" parent="margin/join/VBox"]
margin_top = 265.0
margin_right = 1880.0
margin_bottom = 510.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "4014"
align = 1
placeholder_text = "port"

[node name="HBox" type="HBoxContainer" parent="margin/join"]
margin_top = 530.0
margin_right = 1880.0
margin_bottom = 1040.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="join" type="Button" parent="margin/join/HBox"]
margin_right = 930.0
margin_bottom = 510.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_disabled = Color( 0.0509804, 0.341176, 0, 1 )
custom_colors/font_color = Color( 0.337255, 1, 0.223529, 1 )
custom_colors/font_color_hover = Color( 0.25098, 1, 0.121569, 1 )
custom_colors/font_color_pressed = Color( 0.14902, 1, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "JOIN"

[node name="cancel" type="Button" parent="margin/join/HBox"]
margin_left = 950.0
margin_right = 1880.0
margin_bottom = 510.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_disabled = Color( 0.384314, 0, 0, 1 )
custom_colors/font_color = Color( 1, 0.0980392, 0.0980392, 1 )
custom_colors/font_color_hover = Color( 1, 0.0823529, 0.0823529, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "CANCEL"

[node name="host" type="VBoxContainer" parent="margin"]
visible = false
margin_left = 100.0
margin_top = 100.0
margin_right = 1180.0
margin_bottom = 620.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="VBox" type="VBoxContainer" parent="margin/host"]
margin_right = 1240.0
margin_bottom = 330.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="ip" type="LineEdit" parent="margin/host/VBox"]
margin_right = 1240.0
margin_bottom = 155.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
align = 1
editable = false
placeholder_text = "ip"

[node name="port" type="LineEdit" parent="margin/host/VBox"]
margin_top = 175.0
margin_right = 1240.0
margin_bottom = 330.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "4014"
align = 1
placeholder_text = "port"

[node name="HBox" type="HBoxContainer" parent="margin/host"]
margin_top = 350.0
margin_right = 1240.0
margin_bottom = 680.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="cancel" type="Button" parent="margin/host/HBox"]
margin_right = 610.0
margin_bottom = 330.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_disabled = Color( 0.384314, 0, 0, 1 )
custom_colors/font_color = Color( 1, 0.0980392, 0.0980392, 1 )
custom_colors/font_color_hover = Color( 1, 0.0823529, 0.0823529, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "CANCEL"

[node name="host" type="Button" parent="margin/host/HBox"]
margin_left = 630.0
margin_right = 1240.0
margin_bottom = 330.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_disabled = Color( 0.0509804, 0.341176, 0, 1 )
custom_colors/font_color = Color( 0.337255, 1, 0.223529, 1 )
custom_colors/font_color_hover = Color( 0.25098, 1, 0.121569, 1 )
custom_colors/font_color_pressed = Color( 0.14902, 1, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "HOST"

[connection signal="color_changed" from="margin/primer/tempHBox/ScrollContainer/Panel/ColorPicker" to="." method="_on_ColorPicker_color_changed"]
[connection signal="text_changed" from="margin/primer/tempHBox/name" to="." method="_on_name_text_changed"]
[connection signal="pressed" from="margin/primer/HBox/join" to="." method="_on_primer_join_pressed"]
[connection signal="pressed" from="margin/primer/HBox/host" to="." method="_on_primer_host_pressed"]
[connection signal="pressed" from="margin/join/HBox/join" to="." method="_on_join_join_pressed"]
[connection signal="pressed" from="margin/join/HBox/cancel" to="." method="_on_join_cancel_pressed"]
[connection signal="pressed" from="margin/host/HBox/cancel" to="." method="_on_host_cancel_pressed"]
[connection signal="pressed" from="margin/host/HBox/host" to="." method="_on_host_host_pressed"]
